etc/iptables/rules.v4
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A OUTPUT -m owner --uid-owner 1000 -p tcp --dport 80 -j REDIRECT --to-ports 3128
-A OUTPUT -m owner --uid-owner 1000 -p tcp --dport 3000 -j REDIRECT --to-ports 3128
-A OUTPUT -m owner --uid-owner 1000 -p tcp --dport 443 -j REDIRECT --to-ports 3128
COMMIT
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:user-filt - [0:0]
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT ! -s 202.38.93.94 -p tcp --dport 22 -j REJECT
-A OUTPUT -m owner --uid-owner 1000 -j user-filt
-A OUTPUT -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A user-filt -d 127.0.0.1 -p tcp --dport 3128 -j RETURN
-A user-filt -d 127.0.0.53 -p udp --dport 53 -j RETURN
-A user-filt -d 127.0.0.53 -p tcp --dport 53 -j RETURN
-A user-filt -d 202.38.64.3 -p tcp --dport 23 -j RETURN
-A user-filt -j RETURN -d 202.38.93.94
-A user-filt -j RETURN -d 202.38.93.41
-A user-filt -j RETURN -d 202.38.74.48
-A user-filt -j RETURN -d 202.38.74.47
-A user-filt -j RETURN -d 192.168.74.7
-A user-filt -j RETURN -d 202.38.93.222
-A user-filt -j RETURN -d 202.38.64.246
-A user-filt -j RETURN -d 202.38.74.8
-A user-filt -j REJECT
COMMIT
