etc/iptables/rules.v6
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A OUTPUT -m owner --uid-owner 1000 -p tcp --dport 80 -j REDIRECT --to-ports 3128
-A OUTPUT -m owner --uid-owner 1000 -p tcp --dport 3000 -j REDIRECT --to-ports 3128
-A OUTPUT -m owner --uid-owner 1000 -p tcp --dport 443 -j REDIRECT --to-ports 3128
COMMIT
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:user-filt - [0:0]
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT ! -s 2001:da8:d800:931::94 -p tcp --dport 22 -j REJECT
-A OUTPUT -m owner --uid-owner 1000 -j user-filt
-A OUTPUT -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A user-filt -d ::1 -p tcp --dport 3128 -j RETURN
-A user-filt -j REJECT
COMMIT
